<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".ui.activity.SignInPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="5sp"
            android:src="@drawable/iconstayfit" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_marginTop="32dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:contextClickable="true"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
