<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".CalorieCalculator">
    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/calorie_calculator"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/round_corner"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:padding="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/text_slideshow"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/height_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_corner"
        android:hint="@string/height_cm"
        android:inputType="numberDecimal"
        android:textColorHint="@color/white"
        android:padding="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/age_input"
        tools:layout_editor_absoluteX="96dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/weight_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_corner"
        android:textColorHint="@color/white"
        android:hint="@string/weight_kg"
        android:inputType="numberDecimal"
        android:padding="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/height_input"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#FFFFFF"
        android:padding="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/calculate"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/weight_input"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/calorie_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/gender_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/weight_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/male_button"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/female_button"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="16dp"
        android:background="@drawable/splash_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>
